<resources>
    <string name="app_name">Countries</string>

    <string name="tab_text_1">Login</string>
    <string name="tab_text_2">Signup</string>
    <string name="mail_hint">Email</string>
    <string name="pass_hint">Password (6 characters at least)</string>
    <string name="confirm_pass_hint">Confirm Password</string>
    <string name="password_error">Passwords don\'t match</string>
    <string name="email_error">Email already in use</string>
    <string name="wrong_mail">This Email doesn\'t exist in our database</string>
    <string name="wrong_password">Password doesn\'t match Email</string>

    <string name="oops">Ooops</string>
    <string name="no_internet">No Internet Connection</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
